# python-poetry

./: Dockerfile-2.template  Dockerfile-3.template  LICENSE  Makefile  README.md  dockerfiles.py  pyproject.toml  tags.txt
2/2/: Dockerfile
2/2-alpine/: Dockerfile
3/3.6/: Dockerfile
3/3.6-alpine/: Dockerfile
3/3.7.0/: Dockerfile
3/3.7.0-alpine/: Dockerfile
3/3.7.0-alpine3.7/: Dockerfile
3/3.7.0-alpine3.8/: Dockerfile
3/3.7.0-slim/: Dockerfile
3/3.7.0-slim-stretch/: Dockerfile
3/3.7.0-stretch/: Dockerfile
3/3.7.0-windowsservercore/: Dockerfile
3/3.7.0-windowsservercore-1709/: Dockerfile
3/3.7.0-windowsservercore-ltsc2016/: Dockerfile
3/3.7.0a1/: Dockerfile
3/3.7.0a1-alpine/: Dockerfile
3/3.7.0a1-alpine3.6/: Dockerfile
3/3.7.0a1-slim/: Dockerfile
3/3.7.0a1-stretch/: Dockerfile
3/3.7.0a1-windowsservercore/: Dockerfile
3/3.7.0a2/: Dockerfile
3/3.7.0a2-alpine/: Dockerfile
3/3.7.0a2-alpine3.6/: Dockerfile
3/3.7.0a2-slim/: Dockerfile
3/3.7.0a2-slim-stretch/: Dockerfile
3/3.7.0a2-stretch/: Dockerfile
3/3.7.0a2-windowsservercore/: Dockerfile
3/3.7.0a2-windowsservercore-1709/: Dockerfile
3/3.7.0a2-windowsservercore-ltsc2016/: Dockerfile
3/3.7.0a3-alpine/: Dockerfile
3/3.7.0a3-alpine3.6/: Dockerfile
3/3.7.0a3-alpine3.7/: Dockerfile
3/3.7.0a3-slim/: Dockerfile
3/3.7.0a3-slim-stretch/: Dockerfile
3/3.7.0a3-stretch/: Dockerfile
3/3.7.0a3-windowsservercore/: Dockerfile
3/3.7.0a3-windowsservercore-1709/: Dockerfile
3/3.7.0a3-windowsservercore-ltsc2016/: Dockerfile
alpine/: Dockerfile
latest/: Dockerfile
(+77 files in other folders)
