[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["Michal Mazurek <michal@mazurek-inc.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
